samples/_failures_safe/1761716326_8474b0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7e35db0d.c: In function ‘main’:
./samples/SAFE/__tmp_7e35db0d.c:137:5: error: expected expression at end of input
  137 |     if (scanf("%d", &startVertex) != 1 || startVertex < 0 || startVertex >
      |     ^~
./samples/SAFE/__tmp_7e35db0d.c:137:5: error: expected declaration or statement at end of input
